# aoc-2024-cpp

./: .gitignore
src/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
src/aoc/: aoc2024  input.cpp  input.txt  main.cpp  part_one.cpp  part_two.cpp
src/day1/: part_two.cpp
src/day10/: part_one.cpp  part_two.cpp
src/day11/: part_one.cpp  part_two.cpp
src/day12/: part_one.cpp  part_two.cpp
src/day13/: part_one.cpp  part_two.cpp
src/day14/: part_two.cpp
src/day15/: part_two.cpp
src/day16/: part_one.cpp  part_two.cpp
src/day17/: part_one.cpp
src/day18/: part_one.cpp
src/day19/: part_one.cpp  part_two.cpp
src/day2/: part_one.cpp  part_two.cpp
src/day20/: part_two.cpp
src/day21/: cheating.py
src/day22/: main.cpp  part_two.cpp
src/day23/: cmake_install.cmake
src/day24/: part_two.cpp
src/day25/: part_one.cpp  part_two.cpp
src/day4/: part_two.cpp
src/day6/: part_one.cpp  part_two.cpp
src/day7/: CMakeLists.txt  part_two.cpp
src/template/: part_one.cpp  part_two.cpp
